fix: open CORS to all origins to resolve mobile registration failure
Replaced origin-specific allowlist + allowCredentials with allowedOriginPatterns(*)
since the app uses JWT bearer tokens (not cookies), so credentials mode is not needed.
This removes the dependency on the ALLOWED_ORIGINS env var in Railway.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>